# asteroid

./: Cargo.toml  LICENSE  README.md  instructions.md
.github/workflows/: build-package.yml  generate-icons.yml
gecko-config/: .mozconfig  prefs.js
resources/: asteroid-browser.desktop
resources/filters/: default.txt
resources/ui/: settings.css
scripts/: build-deb.sh  build-flatpak.sh  build-rpm.sh  generate-icons.sh
src/: main.rs
src/bench/: memory.rs  pageload.rs  video.rs
src/core/: blocker.rs  config.rs  engine.rs  memory.rs  mod.rs  tab.rs  updater.rs
src/engines/: mod.rs
src/engines/gecko/: ffi.rs  mod.rs  prefs.rs
src/engines/servo/: mod.rs
src/ui/: mod.rs  settings.rs  shortcuts.rs  tab_bar.rs  toolbar.rs  window.rs
test-pages/: ads.html  heavy-js.html  simple.html  video.html
